<resources>
    <!-- App texts -->
    <string name="app_name">Primer Taller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_math">MathActivity</string>
    <string name="title_activity_convert_base">ConvertBaseActivity</string>
    <string name="title_activity_conv_temperature">ConvTemperatureActivity</string>
    <!-- Hints, texts and edits -->
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_number">One number</string>
    <string name="hint_second_number">Another number</string>
    <string name="hint_temperature">Temperature</string>

    <string name="loginSnackMessage">Recordar contraseña</string>
    <string name="loginSnackActionText">Enviar</string>

    <string name="description_item_image"/>
    <string name="description_image_login"/>

    <string name="zero">0</string>
    <string name="label_result">Resultado:</string>
    <!-- Buttons -->
    <string name="btn_text_forget">Forget Password</string>
    <string name="btn_text_login">Log in</string>
    <string name="btn_min">Menor</string>
    <string name="btn_mcm">MCM</string>
    <string name="btn_max">Mayor</string>
    <string name="btn_pow">Potencia</string>
    <!-- RadioButtons -->
    <string name="rb_text_celsius">Centigrados</string>
    <string name="rb_text_kelvin">Kelvin</string>
    <string name="rb_text_fahrenheit">Fahrenheit</string>
    <string name="rb_text_rankine">Rankine</string>
    <!-- Toasts -->
    <string name="toastMessageEmail">Pasos enviados al correo</string>
    <string name="toastErrorUserField">Debes llenar este campo</string>
    <string name="btn_convertir">Convertir</string>
    <!-- Arrays -->
    <array name="icons">
        <item>@drawable/ic_exposure_plus_1</item>
        <item>@drawable/ic_ac_unit</item>
        <item>@drawable/ic_compare_arrows</item>
        <item>@drawable/ic_collections</item>
        <item>@drawable/ic_people</item>
    </array>
    <string-array name="bases">
        <item>Decimal</item>
        <item>Binario</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
</resources>
